# Chater

./: .gitignore  CMakeLists.txt  test.cpp
QClient/: QClient.pro  main.cpp  main.qml  qml.qrc
client/: baseclient.cpp  clientconfig.cpp  clientmain.cpp
include/: baseclient.h  baseserver.h  clientconfig.h  clientstatus.h  clientutils.h  common.h  cryptofile.h  message.h  server_config.h  serverconfig.h  userdatabase.h
python/: example_qt.py
ref/v1/: client.c  client.cpp  server.c  server.cpp
ref/v2/: client.c  server.c
server/: baseserver.cpp  clientstatus.cpp  common.cpp  cryptofile.cpp  message.cpp  server_config.cpp  serverconfig.cpp  servermain.cpp  userdatabase.cpp
